[package]
name = "c_linked_list"
version = "0.1.0"
authors = ["Andrew Cann <shum@canndrew.org>"]
description = "Utilities for handling NULL-terminated C linked lists"
documentation = "http://canndrew.org/rust-doc/c_linked_list"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ffi", "linked_list"]

[dependencies]
