[package]
name = "c_linked_list"
version = "1.1.1"
authors = ["Andrew Cann <shum@canndrew.org>"]
description = "Utilities for handling NULL-terminated C linked lists"
documentation = "http://canndrew.org/rust-doc/c_linked_list"
license = "MIT OR BSD-3-Clause"
readme = "README.md"
keywords = ["ffi", "linked_list"]

[dependencies]
